# doctr-api

./: Dockerfile  README.md  main.py  models.py  opencv_helpers.py  pyproject.toml  receipt_merge.py  receipt_merge_playground.ipynb  receipt_ocr_playground.ipynb  receipt_processing.py  rocm.Dockerfile
tests/: receipt_merge_tests.py
