[tool.poetry]
name = "doctr-api"
version = "0.1.2"
description = ""
authors = ["Kristian Mischke <kristianmischke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
numpy = "^1.23.3"
python-doctr = {extras = ["torch"], version = "^0.6.0"}
weasyprint = "^56.1"
requests = "^2.28.1"
Pillow = "^9.2.0"
symspellpy = "^6.7.6"
pandas = "^1.5.0"
torch = { version = "=1.13.0+cu117", source = "pytorch" }
torchvision = { version = "=0.14.0+cu117", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117/"
secondary = true

[tool.poetry.dev-dependencies]
scikit-build = "^0.15.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
